syntax = "proto3";

option go_package = "pkg/grpc";
package dfs;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service DFS {
  rpc ReadFile(ReadFileRequest) returns (ReadFileResponse) {}
  rpc WriteFile(WriteFileRequest) returns (WriteFileResponse) {}
  rpc OpenFile(OpenFileRequest) returns (OpenFileResponse);
  rpc CloseFile(CloseFileRequest) returns (CloseFileResponse);  
  rpc UpdateCache(UpdateCacheRequest) returns (UpdateCacheResponse);
  rpc DeleteCache(DeleteCacheRequest) returns (DeleteCacheResponse);
  rpc UpdateLock(UpdateLockRequest) returns (UpdateLockResponse);
  rpc CheckLock(CheckLockRequest) returns (CheckLockResponse);
  rpc InvalidNotification(InvalidNotificationRequest) returns (stream InvalidNotificationResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message ReadFileRequest {
  string filename = 1;
}

message ReadFileResponse {
  string content = 1;
}

message WriteFileRequest {
  string filename = 1;
  string content = 2;
  int32 clientPort = 3;
}

message WriteFileResponse {
  bool success = 1;
}

message OpenFileRequest {
  string filename = 1;
}

message OpenFileResponse {
  string content = 1;
}

message CloseFileRequest {
  string filename = 1;
}

message CloseFileResponse {
  bool success = 1;
}

message UpdateLockRequest {
  string filename = 1;
  bool lock = 2;
}

message UpdateLockResponse {
  bool success = 1;
}

message CheckLockRequest {
  string filename = 1;
}

message CheckLockResponse {
  bool locked = 1;
}

message UpdateCacheRequest {
  string filename = 1;
  string client = 2;
}

message UpdateCacheResponse {
  bool success = 1;
}

message DeleteCacheRequest {
  string filename = 1;
}

message DeleteCacheResponse {
  bool success = 1;
}


message InvalidNotificationRequest {
  string filename = 1;
  google.protobuf.StringValue except = 2;
}

message InvalidNotificationResponse {
  bool invalid = 1;
}

message HealthCheckRequest {
  repeated string file_names = 1; // クライアントが持っているファイル一覧
}

message FileStatus {
  string filename = 1;
  int32 clientPort = 2;  
  google.protobuf.Timestamp updatedTime = 3;   // 更新時刻
}

message HealthCheckResponse {
  repeated FileStatus file_statuses = 1;  // 各ファイルの更新状況のリスト
}